<resources>
    <string name="app_name">llweiya</string>
    <string name="test_string">\t\t\t\t新型职业农民培育工程自2014年起由农业部、财政部共同启动实施，着力培养一支有文化、懂技术、会经营的新型职业农民队伍，为发展现代农业提供强有力的人才支撑。\n
            \t\t\t\t新型职业农民培育工程主要培育“现代青年农场主”、“新型农业经营主体带头人（生产经营型职业农民）”、“专业技能型职业农民”和“专业服务型职业农民”。请根据个人实际情况选择一种类型进行申报，选择后页面直接跳转至与所选类型相对应的申请页面。如无法确定具体类型，请与当地农业主管部门取得联系。\n
            \t\t\t\t现代青年农场主是指具有一定产业基础，高中及以上学历（或相当于高中），年龄在18-45周岁之间的种养大户、家庭农场经营者、农民合作社骨干、返乡创业大学生、中高职毕业生、返乡农民工和退伍军人等。\n
            \t\t\t\t新型农业经营主体带头人（生产经营型职业农民）是指以农业为职业、占有一定的资源、具有一定的专业技能、有一定的资金投入能力，收入主要来自农业生产经营并达到相当水平的现代农业生产经营者，主要是专业大户、家庭农场经营者、农民合作社带头人等。\n
            \t\t\t\t专业技能型职业农民是指在农民合作社、家庭农场、专业大户、农业企业等新型农业经营主体中较为稳定地从事农业岗位作业，并以此为主要收入来源且达到相当水平，具有一定专业技能的农业劳动力，主要是农业工人或农业雇员等。\n
            \t\t\t\t专业服务型职业农民是指在社会化服务组织中或个体直接从事农业产前、产中、产后服务，并以此为主要收入来源且达到相当水平，具有相应服务能力的农业社会化服务人员，主要是农村信息员、农村经纪人、农机服务人员、统防统治植保员、村级动物防疫员等农业社会化服务人员。\n
            \t\t\t\t信息填报过程中可进行保存，确认无误后方可提交，提交完成后个人信息将无法修改。</string>
    <string name="bottom_bar_home">首页</string>
    <string name="bottom_bar_favorite">关注</string>
    <string name="bottom_bar_community">社区</string>
    <string name="bottom_bar_order">订单</string>
    <string name="bottom_bar_mine">我的</string>

    <string name="text_register">注册</string>
    <string name="text_login">登录</string>
    <string name="text_say_hello">你好，\n欢迎来到Llweiya-Food</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_remember_password">记住密码</string>
    <string name="text_other_login_way">其他登录方式</string>
    <string name="text_get_verify_code">获取验证码</string>
    <string name="text_confirm_order">确认订单</string>
    <string name="text_pay_order">支付订单</string>

    <string name="hint_login_phone">请输入手机号码</string>
    <string name="hint_login_password">密码长度6~20位</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="hint_search_key_word">输入关键词搜索</string>

    <string name="toast_exit_app">再按一次退出程序</string>

    <string name="text_language">语言</string>
    <string name="text_publish">发布</string>
    <string name="text_normal_course">教程</string>
    <string name="text_recommend_course">推荐教程</string>
    <string name="text_check_all">查看全部</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
